--- a/Village Project/.classpath
+++ b/Village Project/.classpath
@@ -7,5 +7,6 @@
 	</classpathentry>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="res"/>
+	<classpathentry excluding="src/|res/" kind="src" path=""/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
